chore(app): fix header shift due to scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -125,6 +125,7 @@
 
   html {
     overflow-x: hidden;
+    scrollbar-gutter: stable;
   }
 }
 
